--- a/index.html
+++ b/index.html
@@ -15,29 +15,41 @@
 
     .container {
       text-align: center;
+      width: 100%;
+      max-width: 400px;
     }
 
     h1 {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
+      min-height: 60px; /* prevents jumping */
+    }
+
+    .buttons {
+      position: relative;
+      height: 120px;
     }
 
     button {
       font-size: 18px;
-      padding: 10px 20px;
-      margin: 10px;
-      cursor: pointer;
+      padding: 12px 26px;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
+      cursor: pointer;
+      position: absolute;
+      transition: all 0.3s ease;
     }
 
     #yes {
       background-color: #ff4d6d;
       color: white;
+      left: 55%;
+      transform: translateX(-50%);
     }
 
     #no {
-      background-color: #ccc;
-      position: relative;
+      background-color: #ddd;
+      left: 45%;
+      transform: translateX(-50%);
     }
   </style>
 </head>
@@ -85,5 +97,6 @@
   </script>
 </body>
 </html>
+
 
 
