--- a/index.html
+++ b/index.html
@@ -25,31 +25,22 @@
     }
 
     .buttons {
-      position: relative;
-      height: 120px;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
     }
 
     button {
-      font-size: 18px;
-      padding: 12px 26px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      position: absolute;
-      transition: all 0.3s ease;
+      position: static; /* remove absolute positioning */
     }
 
     #yes {
       background-color: #ff4d6d;
       color: white;
-      left: 55%;
-      transform: translateX(-50%);
     }
 
     #no {
       background-color: #ddd;
-      left: 45%;
-      transform: translateX(-50%);
     }
   </style>
 </head>
@@ -61,5 +52,6 @@
       <button id="yes">Yes</button>
     </div>
   </div>
+
 
 
