--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Be my Valentine? :")</title>
+  <title>Valentine Invitation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -66,6 +66,7 @@
     question.textContent = "Wait… try again 😏";
   });
 </script>
+
 
 
 
