--- a/index.html
+++ b/index.html
@@ -41,13 +41,19 @@
 }
 
     #yes {
-      background-color: #ff4d6d;
-      color: white;
-    }
+  background-color: #ff4d6d;
+  color: white;
+  left: 55%;
+  top: 40px;
+  transform: translateX(-50%) scale(1.15);
+}
 
     #no {
-      background-color: #ddd;
-    }
+  background-color: #ddd;
+  left: 45%;
+  top: 40px;
+  transform: translateX(-50%) scale(1.15);
+}
   </style>
 </head>
 <body>
@@ -138,6 +144,7 @@
   `;
   document.head.appendChild(style);
 </script>
+
 
 
 
