--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <body>
   <div class="container">
-    <h1 id="question">Baby Princess Fluff, will you be my Valentine? 💖</h1>
+    <h1 id="question">Baby Princess Fluffy puff, will you be my Valentine? 💖</h1>
 
     <div class="playground" id="playground">
       <button id="yes">Yes</button>
@@ -198,5 +198,6 @@
   </script>
 </body>
 </html>
+
 
 
