--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <title>Valentine Invitation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
     body {
       font-family: Arial, sans-serif;
-      height: 100vh;
+      min-height: 100svh;
       display: flex;
       justify-content: center;
       align-items: center;
       background: #ffe6eb;
       overflow: hidden;
+      touch-action: manipulation;
     }
 
     .container {
       text-align: center;
-      width: 480px;
+      width: 360px;
+      max-width: 92%;
     }
 
     h1 {
@@ -25,14 +28,19 @@
       min-height: 70px;
     }
 
-    /* Playground for buttons */
+    /* Layout */
     .playground {
-      position: relative;
-      height: 140px;
-      display: flex;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: auto 1fr;
+      column-gap: 40px;
       align-items: center;
-      gap: 30px;
+      height: 160px;
+    }
+
+    /* YES is frozen */
+    .yes-slot {
+      position: relative;
+      z-index: 2;
     }
 
     #yes {
@@ -44,12 +52,20 @@
       border-radius: 14px;
       cursor: pointer;
       transform: scale(1.15);
-      z-index: 2;
+      transform-origin: center;
     }
 
-    /* No starts NORMAL */
-    #no {
+    /* NO playground */
+    .no-zone {
       position: relative;
+      width: 220px;
+      height: 120px;
+    }
+
+    #no {
+      position: absolute;
+      left: 0;
+      top: 40px;
       background-color: #ddd;
       color: black;
       font-size: 22px;
@@ -57,10 +73,9 @@
       border: none;
       border-radius: 14px;
       cursor: pointer;
-      transform: scale(1.15);
     }
 
-    /* Loading bar */
+    /* Loader */
     .loader {
       display: none;
       margin-top: 30px;
@@ -85,16 +100,43 @@
       margin-top: 10px;
       font-weight: bold;
     }
+
+    /* Mobile tweaks */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 22px;
+      }
+
+      #yes,
+      #no {
+        font-size: 20px;
+        padding: 20px 46px;
+      }
+
+      .playground {
+        height: 190px;
+      }
+
+      .no-zone {
+        width: 100%;
+        height: 140px;
+      }
+    }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <h1 id="question">Baby Princess Fluffy Angel, will you be my Valentine? 💖</h1>
+    <h1 id="question">Baby Princess Fluffy Angel, Will you be my Valentine? 💖</h1>
 
-    <div class="playground" id="playground">
-      <button id="yes">Yes</button>
-      <button id="no">No</button>
+    <div class="playground">
+      <div class="yes-slot">
+        <button id="yes">Yes</button>
+      </div>
+
+      <div class="no-zone" id="noZone">
+        <button id="no">No</button>
+      </div>
     </div>
 
     <div class="loader" id="loader">
@@ -108,8 +150,8 @@
   <script>
     const yesBtn = document.getElementById("yes");
     const noBtn = document.getElementById("no");
+    const noZone = document.getElementById("noZone");
     const question = document.getElementById("question");
-    const playground = document.getElementById("playground");
     const loader = document.getElementById("loader");
     const barFill = document.getElementById("barFill");
 
@@ -121,27 +163,19 @@
     function moveNo() {
       noClicks++;
 
-      // Switch to absolute ONLY after first click
-      if (noBtn.style.position !== "absolute") {
-        const rect = noBtn.getBoundingClientRect();
-        const parentRect = playground.getBoundingClientRect();
-
-        noBtn.style.position = "absolute";
-        noBtn.style.left = rect.left - parentRect.left + "px";
-        noBtn.style.top = rect.top - parentRect.top + "px";
-      }
-
-      const maxX = playground.clientWidth - noBtn.offsetWidth;
-      const maxY = playground.clientHeight - noBtn.offsetHeight;
+      const maxX = noZone.clientWidth - noBtn.offsetWidth;
+      const maxY = noZone.clientHeight - noBtn.offsetHeight;
 
       const randomX = Math.random() * maxX;
-      const randomY = Math.random() * maxY;
+      const randomY = Math.random() * (maxY * 0.6); // mobile-friendly
 
       noBtn.style.left = `${randomX}px`;
       noBtn.style.top = `${randomY}px`;
 
       yesScale += 0.2;
       yesBtn.style.transform = `scale(${yesScale})`;
+
+      if (navigator.vibrate) navigator.vibrate(25);
 
       const messages = [
         "Are you sure? 😳",
@@ -157,7 +191,7 @@
 
     yesBtn.addEventListener("click", () => {
       question.textContent = "YAY!! 💖 I knew it!!!";
-      playground.style.display = "none";
+      document.querySelector(".playground").style.display = "none";
       loader.style.display = "block";
 
       setTimeout(() => {
@@ -168,6 +202,8 @@
         loader.style.display = "none";
         launchHearts();
       }, 2300);
+
+      if (navigator.vibrate) navigator.vibrate([50, 30, 50]);
     });
 
     function launchHearts() {
@@ -198,7 +234,3 @@
   </script>
 </body>
 </html>
-
-
-
-
