--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       background-color: #ff4d6d;
       color: white;
       box-shadow: 0 6px 16px rgba(255, 77, 109, 0.35);
+        position: absolute;
+  left: 0;
+  top: 0;  
     }
 
 #no {
@@ -242,4 +245,5 @@
   </script>
 </body>
 </html>
+
 
