--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       background-color: #ff4d6d;
       color: white;
       box-shadow: 0 6px 16px rgba(255, 77, 109, 0.35);
-      left: 10; 
+      left: 10;
+      top: 20;
     }
 
 #no {
@@ -243,6 +244,7 @@
   </script>
 </body>
 </html>
+
 
 
 
