--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
 
 #no {
   position: absolute;
-  left: 0;
-  top: 0;              /* <-- key fix */
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%) scale(1.15);
   background-color: #ddd;
   color: black;
   font-size: 22px;
@@ -83,7 +84,6 @@
   border: none;
   border-radius: 14px;
   cursor: pointer;
-  transform: scale(1.15);
 }
 
 
@@ -242,6 +242,7 @@
   </script>
 </body>
 </html>
+
 
 
 
