--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     }
 
     yesBtn.addEventListener("click", () => {
-      question.textContent = "YAY!! 💖 I knew it!!!";
+      question.textContent = "YAY!! 💖 Congrats on another year of subscription!!";
       document.querySelector(".playground").style.display = "none";
       loader.style.display = "block";
 
@@ -242,6 +242,7 @@
   </script>
 </body>
 </html>
+
 
 
 
