--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@ function launchCats() {
     cat.style.position = "fixed";
     cat.style.left = Math.random() * 90 + "vw";
     cat.style.bottom = "-100px";
-    cat.style.width = 60 + Math.random() * 50 + "px";
+    cat.style.width = 120 + Math.random() * 100 + "px"; // bigger!
+    cat.style.height = "auto";
     cat.style.borderRadius = "12px";
     cat.style.animation = `floatCat ${3 + Math.random() * 2}s ease forwards`;
     document.body.appendChild(cat);
@@ -316,6 +317,7 @@ document.head.appendChild(style);
   </script>
 </body>
 </html>
+
 
 
 
