--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     /* Floating cats */
 @keyframes floatCat {
   0% { transform: translateY(0) rotate(0deg); opacity: 1; }
-  100% { transform: translateY(-120vh) rotate(360deg); opacity: 0; }
+  100% { transform: translateY(-120vh); opacity: 0; }
 }
 
 /* Floating mini emojis for "No" clicks */
@@ -317,6 +317,7 @@ document.head.appendChild(style);
   </script>
 </body>
 </html>
+
 
 
 
